git-svn-id: http://alogcat.googlecode.com/svn/trunk@14 5ece13ba-dd74-11de-b357-fb893c5a43fa